<resources>
    <string name="app_name">MqttDroid</string>
    <string name="title_controls">Controls</string>
    <string name="title_logs">Logs</string>
    <string name="title_settings">Settings</string>

    <string name="add_control">Add New Control</string>
    <string name="add_control_edit">Edit %1$s</string>
    <string name="control_prop_name">Name</string>
    <string name="control_prop_subtitle">Subtitle</string>
    <string name="control_prop_group">Group</string>
    <string name="control_prop_type">Type</string>
    <string name="control_prop_flavour">Flavour</string>
    <string name="control_prop_gauge_topic">Gauge Topic</string>
    <string name="control_prop_state_on_payload">On Payload</string>
    <string name="control_prop_state_off_payload">Off Payload</string>
    <string name="control_prop_value_min">Min Value</string>
    <string name="control_prop_value_max">Max Value</string>
    <string name="control_prop_value_step">Step</string>

    <string name="control_type_trigger">Trigger</string>
    <string name="control_type_toggle">Toggle</string>
    <string name="control_type_range">Range</string>
    <string name="control_type_togglerange">Toggle Range</string>
    <string name="control_type_gauge">Gauge</string>

    <string name="control_flavour_switch">Switch</string>
    <string name="control_flavour_light">Light</string>
    <string name="control_flavour_outlet">Outlet</string>
    <string name="control_flavour_thermostat">Thermostat</string>
    <string name="control_flavour_custom">Custom</string>

    <string name="control_topic_qos_0">0 (At most once)</string>
    <string name="control_topic_qos_1">1 (At least once)</string>
    <string name="control_topic_qos_2">2 (Exactly once)</string>

    <string name="dialog_delete_control_title_noname">Delete Control?</string>
    <string name="dialog_delete_control_title_hasname">Delete %1$s?</string>
    <string name="dialog_delete_control_body">Are you sure you want to delete this control?\n\nYou\'ll have to manually remove it from device controls as well</string>

    <string name="pref_cat_mqtt_broker">MQTT Broker</string>
    <string name="pref_cat_backup">Backup Controls</string>
    <string name="pref_cat_info">Info</string>

    <string name="pref_key_mqtt_broker_host">mqtt_broker_host</string>
    <string name="pref_key_mqtt_broker_port">mqtt_broker_port</string>
    <string name="pref_key_mqtt_client_id">mqtt_client_id</string>
    <string name="pref_key_mqtt_broker_tls">mqtt_broker_tls</string>
    <string name="pref_key_mqtt_broker_tls_validate">mqtt_broker_tls_validate</string>
    <string name="pref_key_mqtt_client_use_auth">mqtt_client_use_auth</string>
    <string name="pref_key_mqtt_client_auth_username">mqtt_client_auth_username</string>
    <string name="pref_key_mqtt_client_auth_password">mqtt_client_auth_password</string>
    <string name="pref_key_mqtt_broker_test">mqtt_broker_test</string>
    <string name="pref_key_backup_save">backup_save</string>
    <string name="pref_key_backup_restore">backup_restore</string>
    <string name="pref_key_info_github">info_github</string>

    <string name="pref_title_mqtt_broker_host">Host</string>
    <string name="pref_title_mqtt_broker_port">Port</string>
    <string name="pref_title_mqtt_client_id">Client ID</string>
    <string name="pref_title_mqtt_broker_tls">Use SSL/TLS</string>
    <string name="pref_title_mqtt_broker_tls_validate">Validate Certificate</string>
    <string name="pref_title_mqtt_client_use_auth">Use Credentials</string>
    <string name="pref_title_mqtt_client_auth_username">Username</string>
    <string name="pref_title_mqtt_client_auth_password">Password</string>
    <string name="pref_title_mqtt_broker_test">Test Connection</string>
    <string name="pref_title_backup_save">Backup on broker</string>
    <string name="pref_title_backup_restore">Restore from broker</string>
    <string name="pref_title_info_github">MqttDroid on GitHub</string>

    <string name="pref_sum_mqtt_client_id">Used by the broker to identify this client. If not set, will default to \"mqttdroid\"</string>
    <string name="pref_sum_mqtt_broker_tls_validate">If enabled the certificate the broker sends must be signed by a trusted CA</string>
    <string name="pref_sum_broker_test">Check if MqttDroid can connect to the broker with the settings provided above</string>
    <string name="pref_sum_backup_save">Backup controls as a retained message on the MQTT broker</string>
    <string name="pref_sum_backup_restore">Restore controls from a previous backup</string>
    <string name="pref_sum_info_github">Commit: %1$s</string>

    <string name="icd_title">Select Custom Icon</string>
</resources>