<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/pref_cat_mqtt_broker">
        <EditTextPreference
            app:key="@string/pref_key_mqtt_broker_host"
            app:defaultValue="192.168.1.1"
            app:title="@string/pref_title_mqtt_broker_host"
            app:icon="@drawable/baseline_language_24"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="@string/pref_key_mqtt_broker_port"
            app:defaultValue="1883"
            app:title="@string/pref_title_mqtt_broker_port"
            app:icon="@drawable/baseline_123_24"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="@string/pref_key_mqtt_client_id"
            app:title="@string/pref_title_mqtt_client_id"
            app:icon="@drawable/baseline_grid_3x3_24"
            app:summary="@string/pref_sum_mqtt_client_id" />
        <SwitchPreferenceCompat
            app:key="@string/pref_key_mqtt_broker_tls"
            app:title="@string/pref_title_mqtt_broker_tls"
            app:defaultValue="false" />
        <SwitchPreferenceCompat
            app:key="@string/pref_key_mqtt_broker_tls_validate"
            app:title="@string/pref_title_mqtt_broker_tls_validate"
            app:summary="@string/pref_sum_mqtt_broker_tls_validate"
            app:defaultValue="false" />
        <SwitchPreferenceCompat
            app:key="@string/pref_key_mqtt_client_use_auth"
            app:title="@string/pref_title_mqtt_client_use_auth"
            app:defaultValue="false" />
        <EditTextPreference
            app:key="@string/pref_key_mqtt_client_auth_username"
            app:title="@string/pref_title_mqtt_client_auth_username"
            app:icon="@drawable/baseline_person_24"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="@string/pref_key_mqtt_client_auth_password"
            app:title="@string/pref_title_mqtt_client_auth_password"
            app:icon="@drawable/baseline_lock_24" />
        <Preference
            app:key="@string/pref_key_mqtt_broker_test"
            app:title="@string/pref_title_mqtt_broker_test"
            app:summary="@string/pref_sum_broker_test" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_cat_backup">
        <Preference
            app:key="@string/pref_key_backup_save"
            app:title="@string/pref_title_backup_save"
            app:icon="@drawable/baseline_save_24"
            app:summary="@string/pref_sum_backup_save" />
        <Preference
            app:key="@string/pref_key_backup_restore"
            app:title="@string/pref_title_backup_restore"
            app:icon="@drawable/baseline_restore_24"
            app:summary="@string/pref_sum_backup_restore" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_cat_info">
        <Preference
            app:key="@string/pref_key_info_github"
            app:title="@string/pref_title_info_github"
            app:icon="@drawable/ic_github" />
    </PreferenceCategory>

</PreferenceScreen>